--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,13 @@
 title: Storrito Blog
 email: support@storrito.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Storrito
+  Post and schedule your Instagram stories with Storrito
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: StorritoFresh
+facebook_username: storrito
+youtube_username:
+google_analytics:
 show_excerpts: true
 
 # Build settings
