--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,11 @@ facebook_username: storrito
 youtube_username:
 google_analytics:
 show_excerpts: true
+excerpt_separator: "<!--more-->"
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
