--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Post and schedule your Instagram stories with Storrito
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+youtube_username: Storrito
+youtube_channel_link: channel/UChI8RtO_ryV-Sm3fwaHQjxw
 twitter_username: StorritoFresh
 facebook_username: storrito
+instagram_username: StorritoFresh
 show_excerpts: true
 excerpt_separator: "<!--more-->"
 
