--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: support@storrito.com
 description: >- # this means to ignore newlines until "baseurl:"
   Post and schedule your Instagram stories with Storrito
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.storrito.com" # the base hostname & protocol for your site, e.g. http://example.com
 youtube_username: Storrito
 youtube_channel_link: channel/UChI8RtO_ryV-Sm3fwaHQjxw/videos
 twitter_username: StorritoFresh
@@ -33,6 +33,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
